split-screen css class added, using it will force the presumed two children in it to take up 50% of the screen each. any immediate child that is display- many will be set to wrap it's flex and inherit the 50% width to try and prevent overflow. scroll-x and scroll-y added, which will enable on an element, say a DisplayMany with overflowing elements, to have a scroll-bar in that direction. the property additionalClasses has been added to DisplayMany which will let you set additional classes on the main div it returns.

--- a/src/index.css
+++ b/src/index.css
@@ -201,12 +201,31 @@ footer {
   height: 0vh;
   visibility: hidden;
 }
+.fill-screen{width: 100%; height: 100%;}
+.scroll-x{overflow-x: scroll;}
+.scroll-y{overflow-y: scroll;}
+.split-screen{
+  /* :nth-child(0){width: 50vw;}
+  :nth-child(1){width: 50vw;} */
+  > * {
+    width: 50%;
+  }
+  .display-many{
+    flex-wrap: wrap;
+    > * {
+      width: inherit;
+    }
+  }
+}
+/* .split-screen:nth-child(0){width: 50vw;}
+.split-screen:nth-child(1){width: 50vw;} */
 .checkout{
   
   .dropdown{
     margin-bottom: -0.5%;
   }
 }
+/* .cart{ width: inherit; height: inherit;} */
 .dropdown{
   z-index: auto;
   /* transform: translateY(-4px); */
